Fix content indexing issue #869 - refactor